--- a/assess-my-app/package.json
+++ b/assess-my-app/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.5",
+    "@mui/styled-engine": "^5.15.5",
+    "@mui/styles": "^5.15.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +15,18 @@
     "@types/node": "^16.18.71",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "i18next": "^23.7.16",
+    "jss": "^10.10.0",
+    "jss-rtl": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
+    "react-hook-form": "^7.49.3",
+    "react-i18next": "^14.0.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
